--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -7,8 +7,8 @@
 				</a>
 	         <div class="zal">
 	         	<div class="zal-box">
-		    		<a href="/" class="dorado"></a>
-		    		<a href="/" class="bavaria"></a>
+		    		<a href="/pages/dorado" class="dorado"></a>
+		    		<a href="/pages/bavaria" class="bavaria"></a>
 		    	</div>
 	    	</div>
 			</div>
