--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -130,10 +130,14 @@ h1:after{
 }
 
 h2{
-  font-size: 30px;
-  color: #fbcb45;
+  font-size: 24px;
+  color: #fff;
+  font-weight: bold;
+  text-transform: uppercase;
   line-height: 1.2;
   text-align: center;
+  z-index: 5;
+  margin: 40px 0 0 0;
 }
 
 h3{
@@ -157,8 +161,8 @@ h5{
 }
 p{
 	font-size: 14px;
-	line-height:18px;
-	letter-spacing: 1px;
+	line-height:22px;
+	letter-spacing: 1.5px;
 	margin:20px 0px 20px 0px;
 }
 a{
@@ -499,9 +503,10 @@ option, select{
 	}
 		.content .text{
 	    	width:100%;
-	    	max-width: 1000px;
-	    	box-sizing:border-box;
+	    	max-width: 1200px;
 	    	margin: auto;
+	    	padding:0 15px 0 15px;
+	    	box-sizing: border-box;
 		}
 
 		.content .field{
@@ -959,6 +964,134 @@ option, select{
 		background: url(images/icon-check.png) no-repeat 10px 7px;
 	}
  
+.page{
+	position: relative;
+	width:100%;
+	max-width: 1000px;
+	margin:20px auto;
+ }
+	.product-images{
+		position: absolute;
+		top:0;
+		left:0;
+		width:300px;
+		height:300px;
+		float: left;
+		overflow:hidden;
+		box-sizing: border-box;
+		background: #000;
+	    box-sizing: border-box;
+	    border: 3px solid #fff;
+	}
+		.product-images img{
+			width:300px;
+			height:300px;
+			object-fit: cover;
+		}
+	.description{
+		width:100%;
+		padding-left: 320px;
+		min-height: 300px;
+		letter-spacing: 1px;
+		font-size: 16px;
+		line-height: 20px;
+		box-sizing: border-box;
+
+	}
+	.description h3{
+		font-size: 24px;
+		font-weight: bold;
+	}
+	.description .price{
+		font-size: 24px;
+		font-weight: bold;
+		margin:20px 0 0 0;
+	}
+		.description .price span{
+			font-size: 16px;
+			font-weight: bold;
+		}
+	.description  .add_to_cart{
+		display: block;
+		width:100px;
+		height:45px;
+		padding:10px;
+		box-sizing: border-box;
+		background: #f1c854 url(/assets/ico_cart_b.svg) no-repeat;
+		background-size: 30px;
+		background-position: 36px 12px;
+		border-radius: 3px;
+		margin: 20px 0 0 0;
+	}
+
+	.MrGallery{
+		position:fixed;
+		top:0;
+		left:0;
+		width:100%;
+		height:100%;
+		background: rgba(0, 0, 0, 0.8);
+		cursor: pointer;
+		z-index: 17;
+		padding:5%;
+		box-sizing: border-box;
+	}
+		.MrGallery .ImgOpened{
+			position: relative;
+			width:100%;
+			max-width: 900px;
+			height:100%;
+			background-size: contain;
+			background-repeat: no-repeat;
+			background-position: center;
+			margin: auto;
+		}
+
+
+		.content .dorado{
+			display: block;
+			width:100%;
+			height:100px;
+			background:url('/assets/logo_d.svg') no-repeat center;
+			background-size: contain;
+			margin: 20px 0 20px 0;
+		}
+		.content .bavaria{
+			display: block;
+			width:100%;
+			height:100px;
+			background:url('/assets/logo_b.svg') no-repeat center;
+			background-size: contain;
+			margin: 20px 0 20px 0;
+
+		}
+		.content .menu{
+			overflow: hidden;
+			width:100%;
+			max-width: 1000px;
+			margin: auto;
+		}
+			.content .menu a{
+				width:250px;
+				display: block;
+				float:left;
+			    font-size: 16px;
+			    line-height: 50px;
+			    font-weight: bold;
+			    text-transform: uppercase;
+			    letter-spacing: 2px;
+			    text-decoration: none;
+			    color: #fff;
+			    background-repeat: no-repeat;
+			    background-position: left center;
+			    background-size: 32px;
+			    padding: 0px 0 0px 50px;
+				background:url('/assets/ico_menu_.svg') no-repeat center;
+				background-size:50px;
+				background-position: left center;
+				box-sizing: border-box;
+				margin:10px 0 10px 0;
+		}
 
 .footer{
 	width:100%;
@@ -1004,17 +1137,37 @@ option, select{
     }
 }
 @media screen and (max-width: 980px) {
+	.content{
+		width:640px;
+	}
 	.table{
 		max-width: 640px; 
 	}
 }
 @media screen and (max-width: 660px) {
+	.content{
+		width:320px;
+	}
+	.page{
+		max-width:320px;
+	}
+		.product-images{
+			position: relative;
+			top:0;
+			left:0;
+			float:none;
+		}
+		.description{
+			padding-left:0;
+		}
 	.table{
 		max-width: 320px; 
 	}
 }
 @media screen and (max-width: 480px) {
-
+	.content{
+		width:320px;
+	}
 	.slider-overlay .rest{
 		font-size: 22px;
 		margin-bottom: -100px;
