--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -41,7 +41,7 @@
 
       <div class="field">
         <%= form.label :description %>
-        <%= form.text_area :description, id: :event_description %>
+        <%= form.cktext_area :description, id: :event_description %>
       </div>
 
       <div class="field">
