--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,66 +2,24 @@
  <%= render partial: 'application/navbar', locals: {back: true, back_url: products_path}%>
  <%= render partial: 'application/header', locals: {h1:@product.title, h1up:"Menu", bg:"", image_url: (get_image(@product.photos[0]).nil? ? '' : get_image(@product.photos[0]).image.url) }%>
 <div class="content">
-<p>
-  <strong>Title:</strong>
-  <%=  %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @product.description %>
-</p>
-
-<p>
-  <strong>Slave:</strong>
-  <%= @product.slave %>
-</p>
-
-
-<% if has_image? @product.photos[0] %>
-  <ul class="product-images">
-    <% @product.photos.each do |meta| %>
-      <li class="item">
-        <div class="meta">meta</div>
-        <%= image_tag get_image(meta).image.url, class: 'img-responsive', width: '320' %>
-      </li>
-    <% end %>
-  </ul>
-<% else %>
-  <%= image_tag 'backgrounds/no-image320x240.png', class: 'img-responsive' %>
-<%end%>
-
-
-<p>
-  <strong>Link:</strong>
-  <%= @product.link %>
-</p>
-
-<p>
-  <strong>tag:</strong>
-  <%= @product.tag %>
-</p>
-
-<p>
-  <strong>Url:</strong>
-  <%= @product.url %>
-</p>
-
-<p>
-  <strong>Link:</strong>
-  <%= @product.link %>
-</p>
-
-<p>
-  <strong>Sort:</strong>
-  <%= @product.sort %>
-</p>
-
-<p>
-  <strong>Count:</strong>
-  <%= @product.count %>
-</p>
-
+      <div class="page">
+    <div class="product-images">
+    <% if has_image? @product.photos[0] %>
+        <% @product.photos.each do |meta| %>
+            <%= image_tag get_image(meta).image.url, class: 'img-responsive', width: '320' %>
+        <% end %>
+    <% else %>
+      <%= image_tag 'backgrounds/no-image320x240.png', class: 'img-responsive' %>
+    <%end%>
+    </div>
+    <div class="description">
+      <h3><%= @product.title %></h3>
+      <%= @product.description %>
+      <p>Состав: <%= @product.slave %></p>
+      Вес: <%= @product.image %>
+      <div class="price">400<span>руб.</span></div>
+      <%= link_to '', cart_item_add_path(:product_id => @product.id), class: 'js-cart-item-add add_to_cart', method: :post, remote: true %>
+    </div>
 <%= link_to 'Edit', edit_product_path(@product) %> |
 
 </div>
