--- a/app/views/devise/menu/_login_items.html.erb
+++ b/app/views/devise/menu/_login_items.html.erb
@@ -1,5 +1,6 @@
 <% if user_signed_in? %>
   <%= link_to('Выход', destroy_user_session_path, method: :get) %>        
 <% else %>
-  <%= link_to('Вход', new_user_session_path)  %>  
+  <%= link_to('Вход', new_user_session_path)  %> 
+  <%= link_to('Регистрация', new_user_registration_path)  %> 
 <% end %>
