--- a/app/views/events/search.html.erb
+++ b/app/views/events/search.html.erb
@@ -2,12 +2,17 @@
  <%= render partial: 'application/navbar', locals: {back: false} %>
  <%= render partial: 'application/header', locals: {h1:"Новости | #{params[:tag]}", h1up:"News"} %>
 <div class="content">
+
 <div class="search">
-  <a href="/events/">Все</a>
-  <a href="/events/search/дорадо">Дорадо</a>
-  <a href="/events/search/бавария">Бавария</a>
-  <a href="/events/search/акция">Акции</a>
+  <ul>
+    <li class="current">Категории</li>
+    <li><a href="/events/">Все</a></li>
+    <li><a href="/events/search/дорадо">Дорадо</a></li>
+    <li><a href="/events/search/бавария">Бавария</a></li>
+    <li><a href="/events/search/акция">Акции</a></li>
+  </ul>
 </div>
+
 <div class="table">
     <% @events.each do |event| %>
        <div class="iteam">
