--- a/app/views/pages/dorado.html.erb
+++ b/app/views/pages/dorado.html.erb
@@ -13,6 +13,13 @@
 <a href="">БАРНАЯ КАРТА</a>
 <a href="">ДЕТСКОЕ МЕНЮ</a>
 </div>
+<div class="photos">
+  <div class=""><img></div>
+  <div class=""><img></div>
+  <div class=""><img></div>
+  <div class=""><img></div>
+</div>
+<a href="/reservations/new" class="button">Забронировать столик</a>
 </div>
 <h2>Последние новости</h2>
 <div class="table">
