--- a/app/views/pages/contacts.html.erb
+++ b/app/views/pages/contacts.html.erb
@@ -1,2 +1,21 @@
-<h1>Pages#contacts</h1>
-<p>Find me in app/views/pages/contacts.html.erb</p>
+<section class="news">
+<%= render partial: 'application/navbar', locals: {back: false}%>
+<%= render partial: 'application/header', locals: {h1:"Контакты", h1up:"Contacts"}%>
+<div class="content">
+	<div class="text">
+		
+		<p class="center">
+			<span class="big">8 800 12 34 56</span>(Телефон для заказа столиков, банкетов, аренды и концертов.)
+			<span class="sbig">info@mail.ru</span>
+			<span class="sbig">г. Липецк, ул. Горького 7</span>
+		</p>
+		<a href="/reservations/new" class="button">Забронировать столик</a>
+		<h2>Карта проезда</h2>
+		<div class="map">
+		<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A09ca8ffe2589e9352d42f8dd5302521b2d5359269eca545a7f962e1469fc70f9&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
+		</div>
+	</div>
+</div>
+
+<%= render partial: 'application/footer', locals: {var1:"123", var2:"123"}%>
+</section>
