--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -15,7 +15,7 @@
       </div>
       <% end %>
     </div>
-    <%= link_to 'New Product', new_product_path %>
+    <%= link_to 'Новый продукт', new_product_path, class: 'button' %>
   </div> 
   <%= render partial: 'application/footer', locals: {var1:"123", var2:"123"}%>
 </section>
