--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,5 +1,12 @@
-<h1>New Product</h1>
+<section class="news">
+<%= render partial: 'application/navbar', locals: {back: false}%>
+<%= render partial: 'application/header', locals: {h1:"Добавить продукт", h1up:"User"}%>
+<div class="content">
+  <div class="page">
 
 <%= render 'form', product: @product, gallery: @gallery %>
 
 <%= link_to 'Back', products_path %>
+
+<%= render partial: 'application/footer', locals: {var1:"123", var2:"123"}%>
+</section>
