--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,13 +10,14 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
+
+ *= require jquery-ui
+
  *
- 
- *--- Static libs --- *
  *
  * 
  *= require dropzone.min
-
+ 
  *= require_tree .
  *= require_self
  */
